Docs updated for Seller Profile.
